Forward msg endpoint done and tested
